#16317 closed bug (fixed)
[regression] Input: mouse picture is displayed at wrong offset and clipped
Reported by: | X512 | Owned by: | PreetpalKaur |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Preferences/Input | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (1)
Change History (7)
by , 10 months ago
Attachment: | InputMouse.png added |
---|
comment:1 by , 10 months ago
Description: | modified (diff) |
---|
comment:2 by , 10 months ago
Description: | modified (diff) |
---|
comment:3 by , 10 months ago
comment:6 by , 10 months ago
Milestone: | Unscheduled → R1/beta3 |
---|
Note:
See TracTickets
for help on using tickets.
Can be related to: hrev54316, hrev54347.