Input: fix MouseView drawing

BeginPicture/EndPicture do not save state so origin should be restored
after recording picture. BView::Draw use PushState internally so origin
is added and cause problem.

hrev54347 fixed behavior when recording picture so state change is
affected. It revealed #16317 bug.

Fixes #16317.

Change-Id: Iee69631ce83fea5ea73c99b492b8cf67d1b148c7
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2960
Reviewed-by: waddlesplash <waddlesplash@gmail.com>